--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.16",
-    "zustand": "^4.4.7",
-    "zod": "^3.22.4"
+    "recharts": "^3.5.0",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "prisma": "^5.7.1",
-    "typescript": "^5.3.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "tsx": "^4.7.0",
+    "postcss": "^8.4.32",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
-
