--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "create:admin": "tsx scripts/create-admin.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
