add switch and select and 3 table in setting also add points and has a weight for each game

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-switch": "^1.2.6",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.10.2",
     "recharts": "^3.5.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
