add wheel and questionSwipe

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@headlessui/react": "^2.2.9",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-switch": "^1.2.6",
+    "@react-spring/web": "^9.7.5",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.10.2",
+    "react-tinder-card": "^1.6.4",
     "recharts": "^3.5.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4",
