--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-switch": "^1.2.6",
     "@react-spring/web": "^9.7.5",
+    "cloudinary": "^2.8.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18.2.0",
